Added search and request ride functionality

--- a/templates/add_ride.html
+++ b/templates/add_ride.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% content block %}
+{% block content %}
     
     <h3>Add a ride</h3>
     <form action="/add-ride" method=POST>
@@ -8,8 +8,8 @@
         Where does your trip begin? <input type="text" name="origin"><br>
         What is your destination? <input type="text" name="destination"><br>
         How many passengers would you like to take? <input type="text" name="max_passengers"><br>
-        Are you willing to pick up or drop off along the way? <input type="text" name="newleg"><br>
-        How much should your passengers chip in? <input type="text" name="cost"><br>
+        Are you willing to pick up or drop off along the way? <input type="text" name="newleg"><br> 
+        How much should each passenger chip in? <input type="text" name="cost"><br>
         <input type="submit">
     </form>
 
