--- a/templates/add_ride.html
+++ b/templates/add_ride.html
@@ -8,7 +8,9 @@
         Where does your trip begin? <input type="text" name="origin"><br>
         What is your destination? <input type="text" name="destination"><br>
         How many passengers would you like to take? <input type="text" name="max_passengers"><br>
-        Are you willing to pick up or drop off along the way? <input type="text" name="newleg"><br> 
+        Are you willing to pick up or drop off along the way?
+            <input type="radio" name="newleg" value="True">Yes 
+            <input type="radio" name="newleg" value="False">No<br> 
         How much should each passenger chip in? <input type="text" name="cost"><br>
         <input type="submit">
     </form>
