Wrote tests for routes

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -15,7 +15,7 @@
     Max passengers: {{ trip.max_passengers }} 
 
     {% if trip.num_passengers == 0 %}
-        <form action="/update-ride" method="get">
+        <form action="/update-ride" method="POST">
             <input type="submit" value="Update ride">
             <input type="hidden" value={{ trip.trip_id }} name="trip">
         </form>
