--- a/templates/update_ride.html
+++ b/templates/update_ride.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<!-- 
+
     <h2>Update Your Ride:</h2>
-        <form action="/update-ride" method=POST>
+        <form action="/update-ride-submit" method=POST>
             Date of trip: <input type="text" name="date"><br>
             Where does your trip begin? <input type="text" name="origin"><br>
             What is your destination? <input type="text" name="destination"><br>
@@ -14,13 +14,5 @@
             How much should each passenger chip in? <input type="text" name="cost"><br>
             <input type="submit">
         </form>
-
-    It would be awesome to be able to update the ride w/o loading a whole new page.  -->   
-
-<!--     Date: {{ trip.date_of_trip }} <br>
-    Starting: {{ trip.origin }} <br>
-    Ending: {{ trip.destination }} <br>
-    Current passengers: {{ trip.num_passengers }} <br>
-    Max passengers: {{ trip.max_passengers }}  -->
 
 {% endblock %}
