--- a/templates/search_form.html
+++ b/templates/search_form.html
@@ -1,11 +1,47 @@
 {% extends 'base.html' %}
+    
+    {% block content %}
 
-{% block content %}
+    <head>
+    <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&libraries=places"></script>
+    <script>
+        var autocomplete;
+        function initialize() {
+          autocomplete = new google.maps.places.Autocomplete(
+              /** @type {HTMLInputElement} */(document.getElementById('origin')),
+              // Only allow city searches in the U.S.
+              { types: ['(cities)'],
+                componentRestrictions: {country: "us"}
+              });
+          google.maps.event.addListener(autocomplete, 'place_changed', function() {
+          });
+        }
 
-    <form action="/search-rides" method=POST>
-        Starting: <input type="text" name="origin"><br>
-        Ending: <input type="text" name="destination"><br>
-        <input type="submit">
-    </form>
+        var autocomplete_destination;
+        function initialize2() {
+          autocomplete_destination = new google.maps.places.Autocomplete(
+              /** @type {HTMLInputElement} */(document.getElementById('destination')),
+              // Only allow city searches in the U.S.
+              { types: ['(cities)'],
+                componentRestrictions: {country: "us"}
+              });
+          google.maps.event.addListener(autocomplete_destination, 'place_changed', function() {
+          });
+        }
+    </script>
+    </head>
 
-{% endblock %}
+    <body onload="initialize(), initialize2()">
+        <div id="locationField">
+            <form action="/search-rides" method=POST>
+                <input id="origin" type="text" name="origin" placeholder="Enter starting location"> 
+                <input id="destination" type="text" name="destination" placeholder="Enter destination">
+                <input type="submit">
+            </form>
+        </div>
+    </body>
+
+
+
+    {% endblock %}
