--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -4,19 +4,21 @@
 
   <h2>Available rides from {{ origin }} to {{ destination }} on {{ date }} :</h2>
 
-  {% for trip in trips %}
-    {% if ((date_obj == trip.date_of_trip) and (destination == trip.destination)) %}
+  <div>
+    {% for trip in trips %}
+      {% if ((date_obj == trip.date_of_trip) and (destination == trip.destination)) %}
 
-      Date: {{ trip.date_of_trip }} <br>
-      Driver: {{ trip.user.fname }} <br>
+        Date: {{ trip.date_of_trip }} <br>
+        Driver: {{ trip.user.fname }} <br>
 
-      <img src={{ trip.user.user_profile_img }}>
+        <img src={{ trip.user.user_profile_img }}>
 
-      <form action="/join-ride" method="POST">
-        <input type="submit" value="Join ride!">
-        <input type="hidden" value={{ trip.trip_id }} name="trip">
-      </form>
-    {% endif %}
-  {% endfor %}
+        <form action="/join-ride" method="POST">
+          <input type="submit" value="Join ride!">
+          <input type="hidden" value={{ trip.trip_id }} name="trip">
+        </form>
+      {% endif %}
+    {% endfor %}
+  </div>
 
 {% endblock %}
