--- a/templates/update_ride.html
+++ b/templates/update_ride.html
@@ -3,7 +3,7 @@
 {% block content %}
 
     <h2>Update Your Ride:</h2>
-        <form action="/update-ride-submit" method=POST>
+        <form action="/update-ride-submit" class="form-group" method=POST>
             Date of trip: <input type="text" name="date"><br>
             Where does your trip begin? <input type="text" name="origin"><br>
             What is your destination? <input type="text" name="destination"><br>
