--- a/templates/add_ride.html
+++ b/templates/add_ride.html
@@ -19,7 +19,7 @@
   {% block content %}
     <h3>Add a ride</h3>
     <body onload="initialize()">
-      <form action="/add-ride" method=POST>
+      <form action="/add-ride" class="form-group" method=POST>
         
         Date of trip: 
           <input id="datepicker" type="text" name="date"><br>
