--- a/templates/nearby_search_results.html
+++ b/templates/nearby_search_results.html
@@ -15,7 +15,7 @@
 
         <form action="/join-ride" method="POST">
           <input type="submit" value="Join ride!">
-          <input type="hidden" value={{ drop_offs_nearby[drop_off]['trip_info']['trip_id'] }} name="trip">
+          <input type="hidden" value={{ drop_offs_nearby[drop_off]['trip_id'] }} name="trip">
         </form>
         <br>
       {% endfor %}
